Remove deprecated `--illegal-access=deny` VM option